--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This is an online chatting app",
   "main": "index.js",
+  "private":"true",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
