--- a/apps/consumers/package.json
+++ b/apps/consumers/package.json
@@ -2,6 +2,7 @@
   "name": "consumers",
   "version": "1.0.0",
   "main": "index.js",
+  "private":"true",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
